# openlntern

./: .gitignore  AGENTS.md  LICENSE  README.md  chat.txt  compose.yaml  eslint.config.js  go.mod  go.sum  main.go  message_202602192353.csv  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
app/: globals.css  layout.tsx  page.tsx  theme.ts
app/(workspace)/: auth.ts  layout.tsx  thread-history-events.ts
app/login/: page.tsx
app/register/: page.tsx
docs/: local-development.md  refactor-report.md  residual-backlog.md  style-guard-rules.md
evals/promptfoo/: .env.promptfoo.example  README.md  package.json  promptfooconfig.yaml
example/client/: go.mod  go.sum
example/server/: go.sum
go/: go.sum
internal/a2ui/: helper.go
internal/agui/: accumulating_sender.go  accumulator.go  converter.go  sender.go
internal/config/: config.go
internal/controllers/: a2ui.go  chat.go  hello.go  kb.go  message.go  plugin.go  skill.go  thread.go  user.go
internal/dao/: context_store.go  knowledge_base.go  message.go  (+8 more)
internal/skills/official/openIntern-飞书办公套件/server/: pyproject.toml
internal/skills/official/openIntern-飞书办公套件/server/feishu_toolkit/: __init__.py  contacts_api.py
openIntern_backend/: .gitignore  builtin_plugins.yaml  go.mod  go.sum  main.go  ov.conf  ov.conf.example
script/: migrate_tools_to_openviking.go  modify.sql
scripts/: init-dev-data.sh  openviking-console-entrypoint.sh  openviking_sdk_exec.py  start-dev-services.sh
开发文档/: 对于Eino实现Skill的方案研究.md  消息归类和渲染处理.md  消息总结流程_2026-02-20.md  点击A2UI按钮发送的请求格式.md  聊天历史消息使用前端的还是后端的.md
(+479 files in other folders)
