[project]
name = "feishu-toolkit"
version = "0.1.0"
description = "飞书办公套件 API 代理服务"
readme = "../SKILL.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.29.0",
  "truststore>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feishu_toolkit"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
